# CODE

./: .gitignore  README.md  compile.sh  install.sh  meson.build
docs/changelog/: CHANGELOG.md  roadmap.md
docs/transpiler/: ast.md
src/: main.vala
src/core/lexer/: lexer.vala  token.vala
src/core/parser/: ast.vala  ast_printer.vala  ast_visitor.vala  parser.vala
src/transpiler/generator/: c_generator.vala
src/transpiler/runtime/: _runtime.h
tests/samples/: hello  hello.c  hello.code
